thoughtfull design is added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 'button-color2': '#ABEF5F',
                 'color-bold' : '#212121',
                 'text-color' : '#494949',
+                'text-color2' : '#737373',
               },
             }
           }
@@ -133,7 +134,48 @@
       </div>
     </header>
     <main>
-     
+     <!-- we design thoughtful -->
+      <section class="bg-gray-100 py-28">
+        <div class="container mx-auto grid md:grid-cols-2 gap-9">
+          <div>
+            <div class="flex justify-center md:justify-normal md:ml-11 mb-5 mx-4">
+             <button class="bg-white rounded-lg flex font-bold text-base pr-2 py-1">
+               <div class="mr-1">
+                <i class="fa-solid fa-arrow-right-long ml-2 gap-8"> </i>
+              </div>
+              About us
+             </button>
+            </div>
+            <div class="md:ml-11 mx-4">
+               <h1 class="text-4xl md:text-5xl font-bold mb-5 text-color-bold text-center md:text-left">We design thoughtful, liveable spaces</h1>
+               <p class="mb-6 text-text-color text-center md:text-left text-sm font-light">That is why we recommend prioritising living spaces when it comes to managing where you allocate your budget,  you will reap the payoffs every day. </p>
+            </div>
+            <div class="flex items-center bg-white rounded-2xl py-6 px-4 mb-6 md:ml-11 mx-4">
+              <div class="mr-3">
+                <img src="assets/commercial.png" alt="">
+              </div>
+              <div>
+                 <h5 class="text-xl font-bold mb-2">Commercial</h5>
+                 <p class="text-sm font-medium text-text-color2 ">Commercial fire damage can happen anytime, and sometimes<br>even your best efforts can’t stop it</p>
+              </div>
+            </div>
+            <div class="flex items-center bg-white rounded-2xl py-6 px-4 mb-6 md:ml-11 mx-4">
+              <div class="mr-3">
+                <img src="assets/residential.png" alt="">
+              </div>
+              <div>
+                 <h5 class="text-xl font-bold mb-2">Residential</h5>
+                 <p class="text-sm font-medium text-text-color2 "> means the outdoor burning of leaves, clip- pings, prunings, and other yard and gardening refuse originating</p>
+              </div>
+            </div>
+          </div>
+          <div class="mx-4">
+            <div>
+              <img src="assets/Rectangle.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
 
