Work process are include

--- a/index.html
+++ b/index.html
@@ -175,6 +175,36 @@
             </div>
           </div>
         </div>
+        <!-- Work process start -->
+         <div class="container mx-auto mt-28 mb-28">
+            <div class="flex justify-center md:ml-11 mb-6 mx-4">
+              <button class="bg-white rounded-lg flex font-bold text-base py-2 px-5 text-text-color">
+                
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
+                  <path fill-rule="evenodd" d="M2 8c0 .414.336.75.75.75h8.69l-1.22 1.22a.75.75 0 1 0 1.06 1.06l2.5-2.5a.75.75 0 0 0 0-1.06l-2.5-2.5a.75.75 0 1 0-1.06 1.06l1.22 1.22H2.75A.75.75 0 0 0 2 8Z" clip-rule="evenodd" />
+                </svg>
+                 How we works
+              </button>
+            </div>
+            <div class="text-center mx-4">
+              <h1 class="text-4xl	md:text-5xl font-bold text-color-bold mb-5">Our Works Process</h1>
+              <p class="text-sm font-medium text-text-color md:w-3/4 md:text-center md:mx-auto">Burns and scalds are commonly caused by steam, spilling or splashing hot liquids and contact with hot surfaces such as food trays.Many people have found it was helpful for them to start work gradually, even before they were fully recovered. </p>
+            </div>
+            <!-- Works card -->
+             <div class="grid md:grid-cols-4 md gap-3 mt-8 md:ml-11 md:mr-11 mx-4">
+                <div class="bg-[#E7C1D3] rounded-2xl	">
+                  <div class="p-6">
+                    <div>
+                      <img src="assets/concept.png" alt="">
+                    </div>
+                    <div>
+                      <h5 class="font-extrabold mt-2 mb-2">Concept</h5>
+                      <p class="text-sm font-medium text-text-color">Some of these are in no particular order, since many of them occur at the same time. As we’re arriving and after we arrive, size up is a priority. The officer in charge.</p>
+                    </div>
+                  </div>
+                </div>
+             </div>
+         </div>
       </section>
     </main>
     <footer>
