The burn house is full completed

--- a/index.html
+++ b/index.html
@@ -203,6 +203,39 @@
                     </div>
                   </div>
                 </div>
+                <div class="bg-[#EFDA6E] rounded-2xl	">
+                  <div class="p-6">
+                    <div>
+                      <img src="assets/flow-chart.png" alt="">
+                    </div>
+                    <div>
+                      <h5 class="font-extrabold mt-2 mb-2">Design Process</h5>
+                      <p class="text-sm font-medium text-text-color">There are three key factors in fire safety design of tall buildings, they are: The evacuation route design. The compartmentation design (fire spread mitigation) The structural fire design.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="bg-[#A4DAC3] rounded-2xl	">
+                  <div class="p-6">
+                    <div>
+                      <img src="assets/vision.png" alt="">
+                    </div>
+                    <div>
+                      <h5 class="font-extrabold mt-2 mb-2">Supervision</h5>
+                      <p class="text-sm font-medium text-text-color">The Burning House represents the world burning with the fires of old age, sickness and death. The teachings of the Buddha are like the father getting the boys to leave their pleasures for a greater pleasure</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="bg-[#77AAEA] rounded-2xl	">
+                  <div class="p-6">
+                    <div>
+                      <img src="assets/budget-planning.png" alt="">
+                    </div>
+                    <div>
+                      <h5 class="font-extrabold mt-2 mb-2">Budget Planning</h5>
+                      <p class="text-sm font-medium text-text-color">The first floor of this luxury house plan has living areas for the entire family. The foyer has a unique u-shaped staircase that is of the same design in the original Burn house plan. Left of the foyer is where the formal dining room is located.</p>
+                    </div>
+                  </div>
+                </div>
              </div>
          </div>
       </section>
