Lets discuss project completed

--- a/index.html
+++ b/index.html
@@ -303,6 +303,45 @@
               </div>
              </div>
           </section>
+          <!-- Lets discuss next project has begun -->
+           <section class="bg-[url(assets/bg.jpg)] bg-cover bg-center bg-no-repeat py-28">
+            <div>
+              <div class="container mx-auto text-center">
+                <div class="flex justify-center md:ml-11 mb-5 mx-4">
+                   <button class="bg-button-color2 rounded-full flex font-bold text-base py-2 px-5 text-text-color">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                    </svg>
+                    Let’s Connect
+                   </button>
+                </div>
+                <h1 class="text-4xl md:text-5xl font-bold text-color-bold mx-4">Let’s Discuss Next Project</h1>
+                <p class="my-4 text-center text-sm font-medium text-text-color mx-4 md:w-3/4 md:text-center md:mx-auto">The only way I have succcessfully set one on fire is by creating a campfire and luring a zombie over the fire and directing it next to a house. burn house next project is lighting </p>
+                <div class="md:grid md:grid-cols-2 gap-6 mt-1 md:ml-11 md:mr-11 mx-4">
+                   <div>
+                    <input placeholder="First name*" class=" w-full py-3 pl-3 rounded-3xl mb-4 md:mb:0" type="text">
+                   </div>
+                   <div>
+                    <input placeholder="Last name*" class=" w-full py-3 pl-3 rounded-3xl mb-4 md:mb:0" type="text">
+                   </div>
+                   <div>
+                    <input placeholder="Phone number*" class="w-full py-3 pl-6 rounded-3xl mb-5 md:mb-0" type="text">
+                   </div>
+                   <div>
+                    <input placeholder="Email Number*" class="w-full py-3 pl-6 rounded-3xl mb-5 md:mb:0" type="text">
+                   </div>
+                   <textarea placeholder="Write your message here" name="" class="w-full h-52 rounded-3xl col-span-2 py-3 pl-6">
+
+                   </textarea>
+                  
+              </div>
+              <div class="mt-8 bg-button-color2 bg-opacity-80 rounded-3xl mx-4 md:mx-11 md:mr-11">
+                <button class="py-2 text-xl font-extrabold">
+                  Send Mail </button>
+              </div>
+            </div>
+
+           </section>
       </section>
     </main>
     <footer>
