Footer section is finished.Therefore,the entire assinment is complete

--- a/index.html
+++ b/index.html
@@ -344,8 +344,39 @@
            </section>
       </section>
     </main>
-    <footer>
-
+    <!-- Footer started -->
+    <footer class="bg-black text-white py-28">
+    <section class="container mx-auto flex justify-center flex-col items-center text-center">
+     <div class="mx-4">
+       <div>
+         <div class="flex justify-center md:ml-11 mb-5 mx-4 md:mr-20 mr-5">
+          <a class="rounded-lg flex font-bold py-2 px-5 text-white text-2xl">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+            </svg>
+              Rinterio
+          </a>
+         </div>
+         <p class="pt-4 pb-11 md:w-3/4 md:text-center md:mx-auto">Is it burned house or burnt house?
+          If you want to use the word “burn” in the past tense, you should always use “burned,” never “burnt.” However, in many dictionaries, both words appear as acceptable.</p>
+       </div>
+       <ul class="md:flex items-center justify-center mb-12 gap-6">
+        <li><a href="#" class="md:mr-24px">Home</a></li>
+        <li><a href="#" class="md:mr-24px">Services</a></li>
+        <li><a href="#" class="md:mr-24px">Portfolio</a></li>
+        <li><a href="#" class="md:mr-24px">Blogs</a></li>
+        <li><a href="#" class="md:mr-24px">Contact Us</a></li>
+       </ul>
+       <div>
+        <button class="btn border-none bg-button-color2 px-10 rounded-full">
+          Book Consult<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
+          </svg>
+          
+        </button>
+       </div>
+     </div>
+    </section>
     </footer>
     
 </body>
